JMD heat rate